--- a/package.json
+++ b/package.json
@@ -56,6 +56,6 @@
     "expect-jsx": "^2.5.1",
     "mocha": "^2.4.5",
     "react-addons-test-utils": "^15.0.2",
-    "webpack-dev-server": "^1.14.1"
+    "webpack-dev-server": ">=3.1.11"
   }
 }
